# arpfloat

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt  setup.py
arpfloat/: __init__.py
benches/: main_benchmark.rs
examples/: calc_pi.rs  fma.py  mul_test.rs  print_bench.rs  print_e.rs  softmax.py
lib/float/src/base/: arithmetic.rs  bigint.rs  cast.rs  float.rs  mod.rs  string.rs  utils.rs
lib/frost/: Cargo.toml
lib/frost/src/base/: arithmetic.rs  cast.rs  float.rs  mod.rs  utils.rs
src/: arithmetic.rs  bigint.rs  cast.rs  float.rs  functions.rs  lib.rs  py.rs  string.rs  utils.rs
src/base/: arithmetic.rs  cast.rs  mod.rs  string.rs  utils.rs
src/operations/: constants.rs  exp.rs  frac.rs  functions.rs  mod.rs  trig.rs
