[package]
name = "arpfloat"
version = "0.1.3"
authors = ["Nadav Rotem <nadav256@gmail.com>"]
categories = ["floating point", "no-std"]
description = "Arbitrary-precision floating point library"
documentation = "https://docs.rs/arpfloat/"
edition = "2021"
keywords = ["float"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nadavrot/arpfloat"

[dependencies]

[features]
default = ["std"]
std = []
