[package]
name = "arpfloat"
version = "0.1.11"
authors = ["Nadav Rotem <nadav256@gmail.com>"]
categories = ["mathematics", "algorithms", "no-std"]
description = "Arbitrary-precision floating point library"
documentation = "https://docs.rs/arpfloat/"
edition = "2021"
keywords = ["float"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nadavrot/arpfloat"

[dependencies]
pyo3 = { version = "0.24.1", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "main_benchmark"
harness = false

[features]
default = ["std", "python"]
std = []
python=["pyo3", "std"]
